# nib

./: .gitattributes  .gitignore  .readthedocs.yaml  CLAUDE.md  Makefile  README.md  mkdocs.yml  output.webm  pyproject.toml  t.py
.github/workflows/: docs.yml
apps/settings_test/src/: main_toggle.py  minimal_settings.py  settings_class.py  settings_controls.py  settings_debug.py  settings_debug10.py  settings_debug2.py  settings_debug3.py  settings_debug4.py  settings_debug5.py  settings_debug6.py  settings_debug7.py  settings_debug8.py  settings_debug9.py  settings_no_load.py  settings_no_register.py  settings_tabs.py  settings_vstack.py  simple_test.py
docs/: Makefile  building.rst  conf.py  docstring_examples.py  getting-started.rst  index.md  requirements.txt
docs/_build/html/: .buildinfo  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/: modules.rst  nib.cli.rst  nib.core.rst  nib.modifiers.appearance.rst  nib.modifiers.effects.rst  nib.modifiers.typography.rst  nib.rst  nib.services.screen.rst  nib.views.charts.axis.rst  nib.views.charts.marks.rst  nib.views.controls.divider.rst  nib.views.controls.gauge.rst  nib.views.controls.label.rst  nib.views.controls.markdown.rst  nib.views.controls.rst  nib.views.controls.slider.rst  nib.views.controls.table.rst  nib.views.controls.text.rst  nib.views.controls.text_editor.rst  nib.views.controls.toggle.rst  nib.views.controls.video.rst  nib.views.effects.blur.rst  nib.views.layout.grid.rst  nib.views.layout.navigation.rst  nib.views.layout.rst  nib.views.layout.vstack.rst  nib.views.layout.zstack.rst  nib.views.rst  nib.views.shapes.capsule.rst  nib.views.shapes.rectangle.rst  nib.views.shapes.rst
docs/assets/css/: custom.css
docs/cli/: build.md  create.md
docs/concepts/: event-handling.md  reactivity.md  view-tree.md
docs/core/: app.rst  state.rst
docs/examples/: drawing-app.md  index.md  system-monitor.md  todo.md
docs/getting-started/: first-app.md  index.md  installation.md
docs/guides/: animations.md  canvas.md  context-menu.md  custom-fonts.md  layouts.md  navigation.md  notifications.md  typography.md
docs/reference/: app.rst  index.md  modifiers.rst  userdefaults.rst
docs/reference/core/: file-picker.md  run.md  settings-page.md  user-defaults.md
docs/reference/draw/: path-elements.md  primitives.md
docs/reference/modifiers/: index.md  layout.md
docs/reference/services/: battery.md  index.md  launch-at-login.md
docs/reference/types/: alignment-enums.md  animation.md  animation.rst  color.md  enums.rst  font.md  geometry.md  image-enums.md  index.md  transition.md
docs/reference/views/: circle.rst  ellipse.rst  gauge.rst  hstack.rst  image.rst  marks.rst  scrollview.rst  text.rst  texteditor.rst  textfield.rst  video.rst
docs/views/: canvas.rst  controls.rst  effects.rst  layout.rst  media.rst  shapes.rst  text.rst
examples/: camera.py  color_demo.py  counter.py  demo.py  didyouknow.py  font_demo.py  markdown_demo.py  min.py  new_features_demo.py  system_info.py  t.py  test_build.txt  test_bundleable.py
examples/apps/: didyouknow.py  showcase.py  system_info.py  yt_downloader.py
examples/apps/demo/: README.md  pyproject.toml
examples/apps/noteit/: README.md  pyproject.toml
examples/apps/noti_demo/: README.md  pyproject.toml
examples/apps/settings_test/: README.md  pyproject.toml
examples/apps/wheredoiwatchit/: README.md  pyproject.toml
examples/apps/wheredoiwatchit/src/: main.py
examples/apps/wheredoiwatchit/src/services/: justwatch.py
examples/basics/: empty.py  m.py  min.py  positioning.py  timer.py
examples/canvas/: bezier_paths.py  canvas_demo.py  canvas_drawing.py  canvas_gradients.py  canvas_image.py  canvas_paths.py  waveform.py
examples/docs/: attributed_string.py  button.py  camerapreview.py  canvas.py  chart.py  colors.py  contextmenu.py  disclosure_group.py  divider.py  form.py  gauge.py  grid.py  image.py  label.py  link.py  list.py  map.py  markdown.py  menu.py  notification.py  picker.py  progressview.py  section.py  securefield.py  settings_page.py  sharelink.py  slider.py  table.py  text.py  texteditor.py  textfield.py  toggle.py  video.py  webview.py
examples/features/: chart_demo.py  charts_demo.py  custom_icon.py  file_picker_demo.py  launch_at_login_demo.py  map.py  notifications_demo.py  settings_demo.py  shape_demo.py  tip_demo.py  webview_demo.py
examples/media/: vid.py  webcam_stream.py
examples/rayondl/: README.md  pyproject.toml
examples/rayondl/src/services/: downloader.py
examples/styling/: animation_showcase.py  attributed_text.py  color_demo.py  gradient_demo.py  svg.py
examples/tests/notifications/: pyproject.toml
package/: Package.swift
package/Nib/: Version.swift  main.swift
package/Nib/App/: AppDelegate.swift
package/Nib/Network/: SocketServer.swift
package/Nib/Protocol/: DrawCommand.swift  NibMessage.swift  ViewModifier.swift  ViewNode.swift
package/Nib/UI/: SettingsWindowController.swift  StatusBarController.swift  ViewActionRegistry.swift  (+1 more)
python/nib/: __init__.py  types.py
scripts/: bump.py  generate_api_docs.sh  screenshot_docs.py  stamp_version.py
site/: Makefile  getting-started.rst  index.html  index.md  index.rst  requirements.txt  sitemap.xml
site/cli/: index.html  index.md  pyproject-config.md  run.md
site/concepts/: architecture.md  index.html  index.md  modifiers.md  view-tree.md
site/core/: menu.rst
site/examples/: counter.md  index.html
site/getting-started/: index.html  installation.md  project-structure.md  quickstart.md
site/guides/: assets.md  charts.md  colors-gradients.md  context-menu.md  drag-drop.md  file-dialogs.md  hotkeys-clipboard.md  index.html  index.md  services.md  settings.md  styling.md
site/reference/: index.html
site/search/: search_index.json
site/services/: index.rst
site/types/: index.rst
site/views/: charts.rst  effects.rst  shapes.rst
swift/: Package.resolved  Package.swift
swift/.build/: build.db  release.yaml  workspace-state.json
swift/Nib/: Info.plist  Version.swift
(+1198 files in other folders)
