[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynib"
dynamic = ["version"]
description = "Python-SwiftUI Bridge for macOS Status Bar Apps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Edoardo Balducci" }
]
keywords = ["macos", "swiftui", "status-bar", "menu-bar", "ui", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "msgpack>=1.1.2",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
nib = "nib.cli:main"

[project.urls]
Homepage = "https://github.com/Bbalduzz/nib"
Repository = "https://github.com/Bbalduzz/nib"

[tool.hatch.version]
path = "sdk/python/nib/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["sdk/python/nib"]
artifacts = ["sdk/python/nib/bin/nib-runtime"]

[tool.hatch.build.targets.editable]
packages = ["sdk/python/nib"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
